Fixed logo spacing

--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ body{
 }
 
 h1 span{
-	margin-left: -7px;
-	margin-right: -7px;
+	margin-left: -5px;
+	margin-right: -5px;
 	margin-top: 50px;
 	font-size: 250%;
 	text-align: center;
